# GSC

./: .gitignore  ADAPTIVE_FORMAT_COMPRESSION_PLAN.md  ADAPTIVE_FORMAT_HANDOFF.md  ADAPTIVE_FORMAT_IMPLEMENTATION_NOTES.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  Method_Architecture.md  README.md  test_plan.sh
dataAnalyzing/adPlOpt/: ad_delta_stats.py  analyze_ad_pl.py  analyze_fallback.py  analyze_pl_ratio.py  analyze_pl_v4_coverage.py  best_pl_codec.py  gt_ad_dp_stats.py  gt_pl_consistency.py  optimal_pl_codec.py  pl_delta_stats.py  quick_stats.py
docs/: gsc2gds.R
docs/bench/: bench_env.sh  bench_env.template  bench_history_template.csv
docs/optimization/: AD_PL_Optimization.md
include/: logger.h
ref_code/: vcf_Parser.h
src/: adaptive_format_known_fields.cpp  adaptive_format_known_fields.h  bit_memory.cpp  bit_memory.h  block_processing.cpp  block_processing.h  bsc.cpp  compression_reader.cpp  compression_reader.h  compression_strategy.cpp  compression_strategy.h  compressor.cpp  compressor.h  decompression_reader.cpp  decompression_reader.h  decompressor.cpp  decompressor.h  field_stats.h  file_handle.cpp  file_handle.h  format_field_codec.cpp  format_field_codec.h  format_field_detector.cpp  format_field_detector.h  gsc_params.h  integrity_checker.cpp  integrity_checker.h  logger.cpp  main.cpp  memory_monitor.h  parallel_vcf_reader.cpp  parallel_vcf_reader.h  parallel_vcf_writer.cpp  parallel_vcf_writer.h  queues.h  resource_manager.cpp  resource_manager.h  samples.cpp  samples.h  utils.cpp  (+6 more)
src/codecs/: bit_tip_array_codec.cpp  bit_tip_array_codec.h  predicted_scalar_codec.cpp  predicted_scalar_codec.h  sparse_dict_codec.cpp  sparse_dict_codec.h
src/fmt_compress/: fmt_dictionaries.h  fmt_field_processor.h  fmt_utils.h  vint_codec.h
src/gvcf/: gvcf.h  gvcf_block.cpp  gvcf_block.h  gvcf_compressor.cpp  gvcf_compressor.h  gvcf_encoding.cpp  gvcf_encoding.h  gvcf_field_compress.cpp  gvcf_field_compress.h  gvcf_field_decompress.cpp  gvcf_field_decompress.h  integration_patch.diff
test_scripts/: bench_alert.py  bench_gsc.sh  bench_merge.sh  bench_pipeline.sh  bench_query.sh  bench_trend.py  check.sh  vcf_canon_hash.py
toy/: HG002_first10k.gvcf
